--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     {% include head-custom.html %}
-    <style>
-.myDiv {
-   width: 150px;
-}
-</style>
   </head>
   <body>
-    <div  class="myDiv">
+    <div  class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
