--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=max-content, initial-scale=1">
+    #wrapper {
+        margin: 0 auto;
+    }
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
