--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=max-content, initial-scale=1">
-    #wrapper {
-        margin: 0 auto;
-    }
+    <meta name="viewport" content="width=max-content, initial-scale=1" margin=0 >
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
