--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,7 @@
       </header>
       <section>
 
-      {{ <p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. 
-        Translational motion along the three orthogonal axis, correspond to three degrees of motion and the 
-        remaining three accounts for the rotation of the rigid body around the three axes. The eye is such a rigid body</p>}}
+      {{ content }}
 
       </section>
       <footer>
