--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,16 +14,29 @@
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
     {% include head-custom.html %}
 <! ---  support for math ---> 
- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> <!--|-->
- <script type="text/x-mathjax-config">                                                                                         <!--|-->
-        MathJax.Hub.Config({                                                                                                      <!--|-->
-            tex2jax: {                                                                                                            <!--|-->
-              inlineMath: [ ['$','$'], ["\\(","\\)"] ],                                                                           <!--|-->
-              processEscapes: true                                                                                                <!--|-->
-            }                                                                                                                     <!--|-->
-        });                                                                                                                       <!--|-->
-   </script>
+    
   </head>
+  
+  <style>
+    .equation {
+  display: table;
+  width: 100%;
+}
+
+.equation__content,
+.equation__number {
+  display: table-cell;
+}
+
+.equation__content {
+  width: 90%;
+}
+
+.equation__number {
+    text-align: right;
+}
+  </style>
+  
   <body>
     <div  class="wrapper">
       <header>
