--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,21 +18,21 @@
   </head>
   
   <style>
-    .equation {
+  equation {
   display: table;
   width: 100%;
 }
 
-.equation__content,
-.equation__number {
+equation__content,
+equation__number {
   display: table-cell;
 }
 
-.equation__content {
+equation__content {
   width: 90%;
 }
 
-.equation__number {
+equation__number {
     text-align: right;
 }
   </style>
