--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       </section>
       <footer>
 
-         <img src="rolfs.png" alt="Logo" />
+         <img src="rolfs.png" alt="Logo" style="float: left />
         <p> In collaboration with <a href="https://rolfslab.org">rolfs lab</a>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
