--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     
   </head>  
   <body>
-    <div  class="wrapper">
+    <div>
       <header>
         <h1><a href="{{ "/" | absolute_url }}">Kinematics of the Eye</a></h1>
 
@@ -39,7 +39,7 @@
         </ul>
         {% endif %}
       </header>
-      <section>
+      <section style={width:75%;}>
 
       {{ content }}
 
