--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   </head>  
   <body>
     <div>
-      <header>
+      <header style="width:40%;">
         <h1><a href="{{ "/" | absolute_url }}">Kinematics of the Eye</a></h1>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
@@ -39,7 +39,7 @@
         </ul>
         {% endif %}
       </header>
-      <section style="width:75%;">
+      <section style="width:70%;">
 
       {{ content }}
 
